creating clean target

--- a/build.properties
+++ b/build.properties
@@ -2,7 +2,7 @@ webapp.dir=WebContent/
 libs.dir=${webapp.dir}/WEB-INF/lib
 
 tmp.root=target
-tmp.dir=${tmp.root}/loja
+tmp.dir=${tmp.root}/MetricMiner
 tmp.webinf.dir=${tmp.dir}/WEB-INF
 tmp.classes.dir=${tmp.webinf.dir}/classes
 tmp.test-classes.dir=${tmp.dir}/test-classes
