--- a/build.xml
+++ b/build.xml
@@ -19,6 +19,10 @@
 		<mkdir dir="${tmp.test-classes.dir}" />
 	</target>
 	
+	<target name="clean">
+		<delete dir="target/" />
+	</target>
+	
 	<target name="compile" depends="prepare">
 		<javac destdir="${tmp.classes.dir}" srcdir="${src.dir}" classpathref="compile.classpath" debug="true" encoding="UTF-8" />
 	</target>
