listing queries with date and adding ivy

--- a/build.properties
+++ b/build.properties
@@ -1,6 +1,8 @@
 webapp.dir=WebContent/
 libs.dir=${webapp.dir}/WEB-INF/lib
 
+ivy.jar.file=ivy-2.2.0.jar
+
 tmp.root=target
 tmp.dir=${tmp.root}/MetricMiner
 tmp.webinf.dir=${tmp.dir}/WEB-INF
