--- a/build.properties
+++ b/build.properties
@@ -2,6 +2,7 @@ webapp.dir=WebContent/
 libs.dir=${webapp.dir}/WEB-INF/lib
 
 ivy.jar.file=ivy-2.2.0.jar
+ivy.file=ivysettings.xml
 
 tmp.root=target
 tmp.dir=${tmp.root}/MetricMiner
