--- a/ivy.xml
+++ b/ivy.xml
@@ -32,6 +32,7 @@
 		<!-- MetricMiner specific dependencies -->
 		<dependency org="com.google.code.javaparser" name="javaparser" rev="1.0.8" conf="default" />
 		<dependency org="org.apache.commons" name="commons-lang3" rev="3.1" conf="default" />
+		<dependency org="net.sf.scannotation" name="scannotation" rev="1.0.2"/>
 		
 		<!-- Test dependencies -->
 		<dependency org="junit" name="junit" rev="4.8.2" conf="test->default" />
