saving queries results at a directory from metricminer.properties

--- a/WebContent/WEB-INF/metricminer.properties
+++ b/WebContent/WEB-INF/metricminer.properties
@@ -1,2 +1,4 @@
 #directory to store projects repositories
-repositories.dir=/tmp/repositories
+repositories.dir=/var/tmp/repositories
+#directory to store csv results
+queries.results.dir=/var/tmp/queries
