--- a/ivy.xml
+++ b/ivy.xml
@@ -34,6 +34,7 @@
 		<dependency org="org.apache.commons" name="commons-lang3" rev="3.1" conf="default" />
 		<dependency org="net.sf.scannotation" name="scannotation" rev="1.0.2"/>
 		<dependency org="br.com.prixma" name="vraptor-tasks" rev="1.0.2" conf="default" />
+		<dependency org="commons-codec" name="commons-codec" rev="1.6"/>
 		
 		<!-- Test dependencies -->
 		<dependency org="junit" name="junit" rev="4.8.2" conf="test->default" />
