--- a/ivy.xml
+++ b/ivy.xml
@@ -35,6 +35,7 @@
 		<dependency org="net.sf.scannotation" name="scannotation" rev="1.0.2"/>
 		<dependency org="br.com.prixma" name="vraptor-tasks" rev="1.0.2" conf="default" />
 		<dependency org="commons-codec" name="commons-codec" rev="1.6"/>
+		<dependency org="org.hibernate" name="hibernate-validator" rev="4.3.0.Final"/>
 		
 		<!-- Test dependencies -->
 		<dependency org="junit" name="junit" rev="4.8.2" conf="test->default" />
