--- a/ivy.xml
+++ b/ivy.xml
@@ -7,18 +7,16 @@
 	</configurations>
 
 	<dependencies>
-		<dependency org="com.thoughtworks.xstream" name="xstream" rev="1.3.1"/>
-		
+		<!-- Hibernate and other stuff -->
 		<dependency org="org.hibernate" name="hibernate-core" rev="3.6.1.Final" conf="default" />
 		<dependency org="org.hibernate.javax.persistence" name="hibernate-jpa-2.0-api" rev="1.0.0.Final" conf="default" />
 		<dependency org="org.hibernate" name="hibernate-c3p0" rev="3.6.1.Final" conf="default" />
 		<dependency org="javax.transaction" name="jta" rev="1.1"/>
 		<dependency org="mysql" name="mysql-connector-java" rev="5.1.18"/>
 		<dependency org="c3p0" name="c3p0" rev="0.9.1" conf="default" />
+		<dependency org="org.hibernate" name="hibernate-validator" rev="4.3.0.Final"/>
+		<dependency org="net.sf.ehcache" name="ehcache-core" rev="2.5.3"/>
 		
-		<dependency org="javassist" name="javassist" rev="3.12.1.GA"/>
-		<dependency org="commons-io" name="commons-io" rev="2.0.1"/>
-		<dependency org="com.google.guava" name="guava" rev="r09"/>
 
 		<!-- VRaptor dependencies -->
 		<dependency org="br.com.caelum" name="vraptor" rev="3.4.0" conf="default" />
@@ -28,6 +26,9 @@
 		<dependency org="org.mortbay.jetty" name="servlet-api-2.5" rev="6.1H.14.1"/>
 		<dependency org="org.glassfish.web" name="jstl-impl" rev="1.2"/>
 		<dependency org="org.mortbay.jetty" name="servlet-api" rev="3.0.pre4"/>
+		<dependency org="javassist" name="javassist" rev="3.12.1.GA"/>
+		<dependency org="commons-io" name="commons-io" rev="2.0.1"/>
+		<dependency org="com.google.guava" name="guava" rev="r09"/>
 
 		<!-- MetricMiner specific dependencies -->
 		<dependency org="com.google.code.javaparser" name="javaparser" rev="1.0.8" conf="default" />
@@ -35,7 +36,9 @@
 		<dependency org="net.sf.scannotation" name="scannotation" rev="1.0.2"/>
 		<dependency org="br.com.prixma" name="vraptor-tasks" rev="1.0.2" conf="default" />
 		<dependency org="commons-codec" name="commons-codec" rev="1.6"/>
-		<dependency org="org.hibernate" name="hibernate-validator" rev="4.3.0.Final"/>
+		<dependency org="net.sf.ehcache" name="ehcache-core" rev="2.5.3"/>
+		<dependency org="com.thoughtworks.xstream" name="xstream" rev="1.3.1"/>
+		
 		
 		<!-- Test dependencies -->
 		<dependency org="junit" name="junit" rev="4.8.2" conf="test->default" />
