license file and path to stats dir

--- a/WebContent/WEB-INF/metricminer.properties
+++ b/WebContent/WEB-INF/metricminer.properties
@@ -2,3 +2,5 @@
 repositories.dir=/var/tmp/repositories
 #directory to store csv results
 queries.results.dir=/var/tmp/queries
+#directory to store r scripts
+queries.results.dir=/var/tmp/stats
