--- a/WebContent/WEB-INF/metricminer.properties
+++ b/WebContent/WEB-INF/metricminer.properties
@@ -3,4 +3,4 @@ repositories.dir=/var/tmp/repositories
 #directory to store csv results
 queries.results.dir=/var/tmp/queries
 #directory to store r scripts
-queries.results.dir=/var/tmp/stats
+stats.results.dir=/var/tmp/stats
